# CafeBabe

./: .gitignore  .gitmodules  CMakeLists.txt  CafeBabe.nez  CafeBabe.packcc  CafeBabe.peg  LICENSE  README.md  assemble.sh  ast_opt.cpp  cafebabe.h  main.cpp  mk.sh  mkall.sh  mkcb.sh  parser.cpp  peglib.h  qq  run-server.sh  symbol_table.h  syntax-tests-nez.sh  syntax-tests-r.sh  syntax-tests.sh
misc/: Bash.katehlcolor  CafeBabe.c  CafeBabe.h  Markdown.katehlcolor  Vim (dark).kateschema  mkcb.sh  syntax-tests-cb.sh
test/: CMakeLists.txt  test2.cc
testInputs/: 0.cb  000000-use.cb  000001-const-string.cb  000002-const-char.cb  000003-const-num.cb  000004-const-other.cb  000005-const-comprehension.cb  000006-const-range.cb  000007-const-array.cb  000008-type-enum.cb  000009-type-other.cb  000009-type-variadic.cb  000010-type-alias.cb  000011-type-api.cb  000012-type-class.cb  000013-type-variadic.cb  000014-fn-misc.cb  000015-fn-flow-control.cb  000016-fn-invocation.cb  000016-obj-construction.cb  000017-extend-simple.cb  000018-structural-check.cb  000019-tuple-construction.cb  000020-assignment.cb
